# zigron_demo

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  http_server.cpp  idf_component.yml  modem_client.cpp  sock_commands_bg96.cpp  sock_dce.cpp  sock_dce.hpp  socket_commands.inc
